<resources>
    <string name="app_name">veki</string>
    <string name="login">Log In</string>
    <string name="facebook">Facebook</string>
    <string name="or_use_your_mobile">or use your mobile</string>
    <string name="request_otp">Request OTP</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="heading">Heading</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_here">New user here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="signup_with">Signup wirh</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_acc">Already have an account?</string>
    <string name="service_provider">Service Provider</string>
    <string name="customer">Customer</string>
    <string name="we_sent_you">We sent you a code to verify</string>
    <string name="your_phone">your phone number</string>
    <string name="sent_to">Sent to +918888888888</string>
    <string name="i_didnt_receive">I didn\'t receive a code</string>
    <string name="resend">Resend</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="facebook_app_id">453033481961735</string>
    <string name="fb_login_protocol_scheme">fb453033481961735</string>
    <string name="title_activity_maps">Map</string>
    <string name="emailPhone">Email Address/Mobile Number</string>
    <string name="visa">Visa</string>
    <string name="cash">Cash</string>
    <string name="country_ascension_island_name">Ascension Island</string>
    <string name="country_ascension_island_code">ac</string>
    <string name="country_ascension_island_number" translatable="false">247</string>
    <string name="country_afghanistan_name">Afghanistan</string>
    <string name="country_afghanistan_code">af</string>
    <string name="country_afghanistan_number" translatable="false">93</string>
    <string name="country_albania_name">Albania</string>
    <string name="country_albania_code">al</string>
    <string name="country_albania_number" translatable="false">355</string>
    <string name="country_algeria_name">Algeria</string>
    <string name="country_algeria_code">dz</string>
    <string name="country_algeria_number" translatable="false">213</string>
    <string name="country_american_samoa_name">American Samoa</string>
    <string name="country_american_samoa_code">as</string>
    <string name="country_american_samoa_number" translatable="false">1</string>
    <string name="country_anguilla_name">Anguilla</string>
    <string name="country_anguilla_code">ai</string>
    <string name="country_anguilla_number" translatable="false">1</string>
    <string name="country_antarctica_name">Antarctica</string>
    <string name="country_antarctica_code">aq</string>
    <string name="country_antarctica_number" translatable="false">672</string>
    <string name="country_antigua_and_barbuda_name">Antigua and Barbuda</string>
    <string name="country_antigua_and_barbuda_code">ag</string>
    <string name="country_antigua_and_barbuda_number" translatable="false">1</string>
    <string name="country_argentina_name">Argentina</string>
    <string name="country_argentina_code">ar</string>
    <string name="country_argentina_number" translatable="false">54</string>
    <string name="country_armenia_name">Armenia</string>
    <string name="country_armenia_code">am</string>
    <string name="country_armenia_number" translatable="false">374</string>
    <string name="country_aruba_name">Aruba</string>
    <string name="country_aruba_code">aw</string>
    <string name="country_aruba_number" translatable="false">297</string>
    <string name="country_australia_name">Australia</string>
    <string name="country_australia_code">au</string>
    <string name="country_australia_number" translatable="false">61</string>
    <string name="country_aland_islands_name">Aland Islands</string>
    <string name="country_aland_islands_code">ax</string>
    <string name="country_aland_islands_number" translatable="false">358</string>
    <string name="country_azerbaijan_name">Azerbaijan</string>
    <string name="country_azerbaijan_code">az</string>
    <string name="country_azerbaijan_number" translatable="false">994</string>
    <string name="country_bahamas_name">Bahamas</string>
    <string name="country_bahamas_code">bs</string>
    <string name="country_bahamas_number" translatable="false">1</string>
    <string name="country_bahrain_name">Bahrain</string>
    <string name="country_bahrain_code">bh</string>
    <string name="country_bahrain_number" translatable="false">973</string>
    <string name="country_bangladesh_name">Bangladesh</string>
    <string name="country_bangladesh_code">bd</string>
    <string name="country_bangladesh_number" translatable="false">880</string>
    <string name="country_barbados_name">Barbados</string>
    <string name="country_barbados_code">bb</string>
    <string name="country_barbados_number" translatable="false">1</string>
    <string name="country_belarus_name">Belarus</string>
    <string name="country_belarus_code">by</string>
    <string name="country_belarus_number" translatable="false">375</string>
    <string name="country_belgium_name">Belgium</string>
    <string name="country_belgium_code">be</string>
    <string name="country_belgium_number" translatable="false">32</string>
    <string name="country_belize_name">Belize</string>
    <string name="country_belize_code">bz</string>
    <string name="country_belize_number" translatable="false">501</string>
    <string name="country_benin_name">Benin</string>
    <string name="country_benin_code">bj</string>
    <string name="country_benin_number" translatable="false">229</string>
    <string name="country_bermuda_name">Bermuda</string>
    <string name="country_bermuda_code">bm</string>
    <string name="country_bermuda_number" translatable="false">1</string>
    <string name="country_bhutan_name">Bhutan</string>
    <string name="country_bhutan_code">bt</string>
    <string name="country_bhutan_number" translatable="false">975</string>
    <string name="country_bolivia_name">Bolivia</string>
    <string name="country_bolivia_code">bo</string>
    <string name="country_bolivia_number" translatable="false">591</string>
    <string name="country_bosnia_and_herzegovina_name">Bosnia And Herzegovina</string>
    <string name="country_bosnia_and_herzegovina_code">ba</string>
    <string name="country_bosnia_and_herzegovina_number" translatable="false">387</string>
    <string name="country_botswana_name">Botswana</string>
    <string name="country_botswana_code">bw</string>
    <string name="country_botswana_number" translatable="false">267</string>
    <string name="country_brazil_name">Brazil</string>
    <string name="country_brazil_code">br</string>
    <string name="country_brazil_number" translatable="false">55</string>
    <string name="country_british_virgin_islands_name">British Virgin Islands</string>
    <string name="country_british_virgin_islands_code">vg</string>
    <string name="country_british_virgin_islands_number" translatable="false">1</string>
    <string name="country_british_indian_ocean_territory_name">British Indian Ocean Territory</string>
    <string name="country_british_indian_ocean_territory_code">io</string>
    <string name="country_british_indian_ocean_territory_number" translatable="false">246</string>
    <string name="country_brunei_darussalam_name">Brunei Darussalam</string>
    <string name="country_brunei_darussalam_code">bn</string>
    <string name="country_brunei_darussalam_number" translatable="false">673</string>
    <string name="country_iceland_name">Iceland</string>
    <string name="country_iceland_code">is</string>
    <string name="country_iceland_number" translatable="false">354</string>
    <string name="country_bulgaria_name">Bulgaria</string>
    <string name="country_bulgaria_code">bg</string>
    <string name="country_bulgaria_number" translatable="false">359</string>
    <string name="country_burkina_faso_name">Burkina Faso</string>
    <string name="country_burkina_faso_code">bf</string>
    <string name="country_burkina_faso_number" translatable="false">226</string>
    <string name="country_burundi_name">Burundi</string>
    <string name="country_burundi_code">bi</string>
    <string name="country_burundi_number" translatable="false">257</string>
    <string name="country_cambodia_name">Cambodia</string>
    <string name="country_cambodia_code">kh</string>
    <string name="country_cambodia_number" translatable="false">855</string>
    <string name="country_cameroon_name">Cameroon</string>
    <string name="country_cameroon_code">cm</string>
    <string name="country_cameroon_number" translatable="false">237</string>
    <string name="country_canada_name">Canada</string>
    <string name="country_canada_code">ca</string>
    <string name="country_canada_number" translatable="false">1</string>
    <string name="country_cape_verde_name">Cape Verde</string>
    <string name="country_cape_verde_code">cv</string>
    <string name="country_cape_verde_number" translatable="false">238</string>
    <string name="country_caribbean_netherlands_name">Caribbean Netherlands</string>
    <string name="country_caribbean_netherlands_code">bq</string>
    <string name="country_caribbean_netherlands_number" translatable="false">599</string>
    <string name="country_cayman_islands_name">Cayman Islands</string>
    <string name="country_cayman_islands_code">ky</string>
    <string name="country_cayman_islands_number" translatable="false">1</string>
    <string name="country_central_african_republic_name">Central African Republic</string>
    <string name="country_central_african_republic_code">cf</string>
    <string name="country_central_african_republic_number" translatable="false">236</string>
    <string name="country_chad_name">Chad</string>
    <string name="country_chad_code">td</string>
    <string name="country_chad_number" translatable="false">235</string>
    <string name="country_chile_name">Chile</string>
    <string name="country_chile_code">cl</string>
    <string name="country_chile_number" translatable="false">56</string>
    <string name="country_china_name">China</string>
    <string name="country_china_code">cn</string>
    <string name="country_china_number" translatable="false">86</string>
    <string name="country_christmas_island_name">Christmas Island</string>
    <string name="country_christmas_island_code">cx</string>
    <string name="country_christmas_island_number" translatable="false">61</string>
    <string name="country_cocos_keeling_islands_name">Cocos (keeling) Islands</string>
    <string name="country_cocos_keeling_islands_code">cc</string>
    <string name="country_cocos_keeling_islands_number" translatable="false">61</string>
    <string name="country_colombia_name">Colombia</string>
    <string name="country_colombia_code">co</string>
    <string name="country_colombia_number" translatable="false">57</string>
    <string name="country_comoros_name">Comoros</string>
    <string name="country_comoros_code">km</string>
    <string name="country_comoros_number" translatable="false">269</string>
    <string name="country_congo_name">Republic of the Congo</string>
    <string name="country_congo_code">cg</string>
    <string name="country_congo_number" translatable="false">242</string>
    <string name="country_the_democratic_republic_of_congo_name">Democratic Republic of the Congo</string>
</resources>