<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.EmailLoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_circular_ends"
                android:hint="@string/email_address"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/regular_text"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_circular_ends"
                android:hint="@string/password"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/regular_text"
                tools:ignore="Autofill,TextFields" />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/small_text" />

            <LinearLayout
                android:paddingBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/submit"
                    android:layout_marginBottom="20dp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/navy_blue"
                    android:background="@drawable/rectangle_circular_ends"
                    android:textSize="@dimen/regular_text"
                    android:textColor="@color/white"
                    android:padding="15dp"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/small_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user_here" />

                    <TextView
                        android:id="@+id/sign_up"
                        android:paddingStart="2dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>