<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.VerifyOtpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/we_sent_you"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_phone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sent_to"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/regular_text"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="6"
                    android:hint="Enter verification code"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text"
                    tools:ignore="LabelFor" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/i_didnt_receive"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/regular_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resend"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/regular_text"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/rectangle_circular_ends"
                    android:backgroundTint="@color/navy_blue"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/regular_text"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>