<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-10dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                app:cardElevation="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="30dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/service_provider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/service_provider"
                        android:textColor="@color/black"
                        android:textSize="@dimen/regular_text" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/customer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/customer"
                        android:textColor="@color/black"
                        android:textSize="@dimen/regular_text" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_circular_ends"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/regular_text"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_circular_ends"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/regular_text"
                tools:ignore="Autofill" />

            <FrameLayout
                android:id="@+id/mobileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp">

                <Spinner
                    android:id="@+id/spinner_code"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/countryCodes"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text" />

                <EditText
                    android:id="@+id/mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:background="@drawable/rectangle_circular_ends"
                    android:ems="10"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/regular_text"
                    android:textStyle="bold">

                    <requestFocus />
                </EditText>

            </FrameLayout>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_circular_ends"
                android:hint="Enter password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/regular_text"
                android:visibility="visible"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_circular_ends"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/regular_text"
                android:visibility="visible"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectangle_circular_ends"
                android:backgroundTint="@color/navy_blue"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/regular_text"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/text_one"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/text_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/signup_with"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/text_one"
                    android:background="@color/black" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangle_circular_ends"
                    android:backgroundTint="@color/light_grey"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/regular_text" />

                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/rectangle_circular_ends"
                    android:backgroundTint="@color/navy_blue"
                    android:gravity="center"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    android:textSize="@dimen/regular_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_acc"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>